--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,12 @@
+# Special files
 testing_dir.path
 
+# Python
 *.py[cod]
+
+# Linux
 *~
 
 # Vi
 *.swp
 
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-__pycache__
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
